# streamray

./: .envrc  .gitignore  CHANGELOG.md  README.md  default.nix  flake.nix  hie.yaml  nixpkgs.nix  shell.nix  streamray.cabal
app/: Main.hs
src/Streamray/: Intersect.hs  Light.hs  Linear.hs  Material.hs  Ray.hs  Render.hs  RenderSettings.hs  Sampling.hs  Scene.hs
src/Streamray/Geometry/: Box.hs  Triangle.hs
src/Streamray/Scene/: Cornel.hs  HaskellLogo.hs  MIS.hs  ManySpheres.hs  SphereSampling.hs
tests/: Spec.hs
