cabal-version:      2.4
name:               streamray
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Guillaume Bouchard
maintainer:         guillaum.bouchard@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:    base ^>=4.14.1.0, JuicyPixels, random
    hs-source-dirs:   src
    exposed-modules: Streamray.Linear
                   , Streamray.Render
                   , Streamray.Material
                   , Streamray.Ray
                   , Streamray.Scene
                   , Streamray.Sampling
    default-language: Haskell2010
    ghc-options: -Wall -haddock


executable streamray
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, JuicyPixels, streamray
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -haddock
