cabal-version:      2.4
name:               streamray
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Guillaume Bouchard
maintainer:         guillaum.bouchard@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:    base ^>=4.14.1.0, JuicyPixels, random, async, deepseq, time, PyF
    hs-source-dirs:   src
    exposed-modules: Streamray.Linear
                   , Streamray.Render
                   , Streamray.Material
                   , Streamray.Ray
                   , Streamray.Scene
                   , Streamray.Scene.Cornel
                   , Streamray.RenderSettings
                   , Streamray.Scene.ManySpheres
                   , Streamray.Sampling
                   , Streamray.Light
                   , Streamray.Intersect
    default-language: Haskell2010
    ghc-options: -Wall -haddock -fwarn-incomplete-uni-patterns -Wunused-packages -Wno-name-shadowing

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base, streamray, hspec, QuickCheck, random
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -Wunused-packages -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

executable streamray
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, streamray, optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -haddock -rtsopts -threaded "-with-rtsopts=-N -qg -T"
